<?xml version="1.0" encoding="utf-8"?>
<resources>
  <!-- Main data strings -->
  <string name="app_name">MATSOL</string>

  <!-- Main window buttons -->
  <string name="about">About</string>
  <string name="determinant_button_label">Determinant</string>
  <string name="matrix_button_label">Equations</string>
  <string name="decoder_button_label">Decoder</string>
  <string name="converter_button_label">Converter</string>
  <string name="rescalc_button_label">Resistors</string>
  <string name="action_about">About</string>

  <!-- about strings -->
  <string name="version">Version 1.2</string>
  <string name="copyright">GIDA 2014 - Ingeniería Electrónica - Universidad Iberoamericana</string>
  <string name="authors_banner">Author:</string>
  <string name="special_thanks_banner">Special Thanks:</string>
  <string name="name1">Alejandro Paredes Alva</string>
  <string name="name2">Santiago Torres Arias</string>
  <string name="name3">Yoshiki Vazques Baeza</string>
  <string name="contact_banner">Contact</string>
  <string name="website">www.ie.uia.mx</string>
  <string name="email">polarbearsdevteam@gmail.com</string>

  <!-- matrix size picker dialog !-->
  <string name="cancel">Cancel</string>
  <string name="matrix_picker_next">Next</string>
  <string name="determinant_message_picker_dialog">Choose the size of the determinant</string>
  <string name="matrix_size_message_picker_dialog">Choose the size of the matrix</string>

  <!-- Rescalc Dialog -->
  <string name="rescalc_dialog_message">Configure the resistor to calculate</string>
  <string name="res_target_value">Target value:</string>
  <string name="algorithm_label_text">Algorithm:</string>
  <string name="resistor_algorithm_original">Original</string>
  <string name="resistor_algorithm_dp">Dynamic Programming</string>
  <string name="tolerance_target_value">Tolerance:</string>

  <!-- Matrix Input Activity -->
  <string name="matrix_input_label">Matrix Input</string>
  
  <!-- Matrix Display Activity -->
  <string name="matrix_display_label">Matrix Input</string>

  <!-- Base Converter Activity -->
  <string name="base_converter_label">Base Converter</string>

</resources>
