<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    >
    <TextView
      android:id="@+id/resistor_target_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/res_target_value"
      android:paddingLeft="6dp"
      /> 
    <TextView
      android:id="@+id/resistor_target_input"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="270"
      android:paddingRight="6dp"
      />
    <TextView
      android:id="@+id/resistor_target_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tolerance_target_value"
      android:paddingLeft="6dp"
      />
    <Spinner
      android:id="@+id/tolerance_spinner"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      />
  </LinearLayout> 
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <TextView
      android:id="@+id/resistor_algorithm_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/algorithm_label_text"
      android:paddingLeft="6dp"
      />
    <Button
      android:id="@+id/resistor_algorithm_toggle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/resistor_algorithm_original"
      />
  </LinearLayout>
</LinearLayout>
